# ROTMG-Scraper

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/rotmg_scraper/: main.py
src/rotmg_scraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
